# turtlebot_explorateur

./: CMakeLists.txt  FICHE_TECHNIQUE.md  README.md  connect_and_launch_frontier.sh  connect_and_launch_frontier1.sh  package.xml
detection/: CMakeLists.txt
detection/launch/: projet.launch
detection/src/: move_auto.cpp  objectrecognition.cpp  qrcode.cpp  trace1.cpp  traitement_image.cpp  turtlebot_distance_estimator.cpp
ii/ii/detection/: package.xml
ii/ii/detection/src/: objectrecognition.cpp  ra2.cpp  trace1.cpp
launch/: turtlebot3_burger_camera.launch
src/: autre.cpp  image_processor.cpp  image_receiver.cpp  image_sender.cpp  move_auto.cpp  move_to_not_visited.cpp  noeud.cpp  trace1.cpp  trace2.cpp  visited_position.cpp
urdf/: turtlebot3_burger_camera.urdf.xacro
